[gd_scene load_steps=14 format=3 uid="uid://comjphfowf338"]

[ext_resource type="Script" uid="uid://cq5qdcju2caye" path="res://level objects/Enemies/baddy_template.gd" id="1_gfnbd"]
[ext_resource type="Script" uid="uid://c21fn48h6wrix" path="res://level objects/Enemies/baddy_collison.gd" id="2_pn267"]
[ext_resource type="Texture2D" uid="uid://mxrowgefheo6" path="res://sprite/Baddies/Kritter_animated.png" id="3_g76ik"]
[ext_resource type="AudioStream" uid="uid://bvm1dgob6io56" path="res://sounds/sound effects/Baddies/KritterHurt_1.wav" id="4_3xvkv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhnte"]
size = Vector2(31.0625, 36.875)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow2ej"]
atlas = ExtResource("3_g76ik")
region = Rect2(0, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrgcc"]
atlas = ExtResource("3_g76ik")
region = Rect2(33, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndmql"]
atlas = ExtResource("3_g76ik")
region = Rect2(0, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw034"]
atlas = ExtResource("3_g76ik")
region = Rect2(33, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_84d6r"]
atlas = ExtResource("3_g76ik")
region = Rect2(0, 66, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pjqv"]
atlas = ExtResource("3_g76ik")
region = Rect2(33, 66, 33, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_ch5hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow2ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrgcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndmql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw034")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84d6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pjqv")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow2ej"]
size = Vector2(66, 77)

[node name="baddy" type="CharacterBody2D" groups=["baddies"]]
collision_layer = 3
collision_mask = 3
input_pickable = true
script = ExtResource("1_gfnbd")
speed = 100.0

[node name="shoot_area" type="Area2D" parent="."]
script = ExtResource("2_pn267")

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_area"]
position = Vector2(-0.5, 1.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lhnte")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ch5hk")
autoplay = "default"
frame_progress = 0.418431
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 1.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lhnte")

[node name="change_direction_timer" type="Timer" parent="."]
autostart = true

[node name="baddy_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3xvkv")
bus = &"Sfx"

[node name="nearby_dector" type="Area2D" parent="." groups=["baddies"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="nearby_dector"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_ow2ej")

[connection signal="mouse_entered" from="shoot_area" to="." method="_on_shoot_area_mouse_entered"]
[connection signal="mouse_exited" from="shoot_area" to="." method="_on_shoot_area_mouse_exited"]
[connection signal="timeout" from="change_direction_timer" to="." method="_on_change_direction_timer_timeout"]
